--- a/nextwordpredictionwebapp/www/style.css
+++ b/nextwordpredictionwebapp/www/style.css
@@ -12,6 +12,10 @@ br {
     margin: 1px 0;
 }
 
+h2 {
+    color:#636363;
+}
+
 .title {
     padding-right:15px;
     font-size:1.1em;
@@ -96,14 +100,16 @@ br {
 }
 
 .right {
-    padding-left:3em;
+    padding-left:1em;
 }
 
 .right2 {
     padding-left:5em;
 }
 
-
+.doc {
+    margin-bottom:5em
+}
 
 #topTitle {
      position:absolute;
@@ -129,4 +135,11 @@ br {
     position: absolute;
     top: 2px;
     left: 2px;
+}
+
+#models {
+    position:absolute;
+    top:-10px;
+    left:-50px;
+    width:600px;
 }
