--- a/nextwordpredictionwebapp/www/style.css
+++ b/nextwordpredictionwebapp/www/style.css
@@ -68,6 +68,20 @@ h2 {
     width: 520px;
 }
 
+.well-trace {
+    position:absolute;
+    top:-10px;
+    left:-100px;
+    width: 700px;
+    background-color: #f5f5f5;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+    margin-bottom: 20px;
+    padding: 19px;
+}
+
+
 .tabs{
     width:50%;
     height:50px;
@@ -109,6 +123,19 @@ h2 {
 
 .doc {
     margin-bottom:5em
+}
+
+.pbm {
+    margin-bottom:3em
+}
+
+.keywords {
+    top:-20px;
+    left:-50px;
+    margin:1.5em auto 1.5em auto;
+    width: 25%;
+    color:#636363;
+    font-size:1.5em;
 }
 
 #topTitle {
