--- a/nextwordpredictionwebapp/www/style.css
+++ b/nextwordpredictionwebapp/www/style.css
@@ -138,6 +138,11 @@ h2 {
     font-size:1.5em;
 }
 
+.center {
+    margin:0.1em auto 0.1em auto;
+    width:75%;
+}
+
 #topTitle {
      position:absolute;
      top: 2px;
